# notebooklm

./: .gitignore  LICENSE  README.md  implementation_plan.md  pyproject.toml  run_mcp.py  server.py
notebooklm_mcp/: __init__.py  auth_cli.py  server.py
