[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebooklm-mcp"
version = "1.0.0"
description = "MCP Server for Google NotebookLM — manage notebooks, sources, and Q&A via API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "quanghufi" },
]
keywords = ["mcp", "notebooklm", "google", "ai", "notebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
notebooklm-mcp = "notebooklm_mcp.server:cli_main"
notebooklm-mcp-auth = "notebooklm_mcp.auth_cli:main"

[project.urls]
Homepage = "https://github.com/quanghufi/notebooklm-mcp"
Repository = "https://github.com/quanghufi/notebooklm-mcp"
Issues = "https://github.com/quanghufi/notebooklm-mcp/issues"
